@@ -7,7 +7,7 @@ DEB_BUILD_MAINT_OPTIONS = hardening=+all
 # coroutine, and fiber depend on context, so they are also conditionally compiled
 boost_libs := atomic chrono container contract date-time exception filesystem	\
               graph graph-parallel iostreams locale log math mpi	\
-              mpi-python numpy program-options python random regex	\
+              mpi-python program-options python random regex	\
               serialization stacktrace system test thread timer \
               type-erasure wave
 
@@ -128,6 +128,7 @@ mk_debhelper_files = \
 TOOLSET_CONFIG = 'using gcc : : : <compileflags>"$(CPPFLAGS)" <cflags>"$(CFLAGS)" <cxxflags>"$(CXXFLAGS) -Wno-unused-local-typedefs" <linkflags>"$(LDFLAGS)" ;'
 BUILD_CONTEXT = yes
 BUILD_LONG_DOUBLE = yes
+BUILD_NUMPY = yes
 
 ifeq ($(DEB_BUILD_ARCH), alpha)
 BUILD_CONTEXT = no
@@ -143,6 +144,10 @@ JAM_OPT += pch=off
 else ifeq ($(DEB_BUILD_ARCH), hppa)
 BUILD_LONG_DOUBLE = no
 BUILD_CONTEXT = no
+else ifeq ($(DEB_BUILD_ARCH), i386)
+ifeq ($(DEB_VENDOR), Ubuntu)
+BUILD_NUMPY = no
+endif
 else ifeq ($(DEB_BUILD_ARCH), ia64)
 BUILD_CONTEXT = no
 else ifeq ($(DEB_BUILD_ARCH), m68k)
@@ -178,6 +183,10 @@ ifeq ($(BUILD_LONG_DOUBLE), yes)
 boost_lib_math += $(boost_lib_math_long_double)
 else
 JAM_OPT += --disable-long-double
+endif
+
+ifeq ($(BUILD_NUMPY), yes)
+boost_libs += numpy
 endif
 
 exampledir = debian/libboost$(PKGVERSION)-doc/usr/share/doc/libboost$(PKGVERSION)-doc/examples
@@ -328,7 +337,9 @@ override_dh_makeshlibs:
 	dh_makeshlibs --remaining-packages
 	sed -i -r 's/^(libboost_python([0-9]{2}) \S+ (\S+).*)$$/\1, \3-py\2/' debian/libboost-python$(SOVERSION)/DEBIAN/shlibs
 	sed -i -r 's/^(libboost_mpi_python([0-9]{2}) \S+ (\S+).*)$$/\1, \3-py\2/' debian/libboost-mpi-python$(SOVERSION)/DEBIAN/shlibs
+ifeq ($(BUILD_NUMPY), yes)
 	sed -i -r 's/^(libboost_numpy([0-9]{2}) \S+ (\S+).*)$$/\1, \3-py\2/' debian/libboost-numpy$(SOVERSION)/DEBIAN/shlibs
+endif
 
 $(b2):
 	cd tools/build && bison -y -d -o src/engine/jamgram.cpp src/engine/jamgram.y
